# krono_metamodule

./: .gitignore  BUILD_METAMODULE.cmd  CMakeLists.txt  LICENSE  README.md  build_metamodule_msys.sh  clean_metamodule.cmd  clean_metamodule.ps1  plugin-mm.json  run_metamodule_cmake.ps1
metamodule-plugin-sdk/: plugin.cmake
metamodule-plugin-sdk/cmake/: arm-none-eabi-gcc.cmake
metamodule-plugin-sdk/plugin-libc/libstdc++-v3/src/c++11/: cow-stdexcept.cc
metamodule-plugin-sdk/plugin-libc/libstdc++-v3/src/c++17/: floating_to_chars.cc
metamodule-plugin-sdk/scripts/actions/: png.py
metamodule-plugins/: Jolin.mmplugin  readme.txt
releases/: Jolin-v1.0.3.mmplugin.sha256  Krono-1.0.0.mmplugin.sha256  Krono-v1.0.1.mmplugin  Krono-v1.0.1.mmplugin.sha256  Krono-v1.0.2.mmplugin  Krono-v1.0.2.mmplugin.sha256  Krono.mmplugin  release_notes.txt
scripts/: export_mm_faceplate_png.py
